responsive UI fix

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissor Game</title>
-    <link rel="stylesheet" href="/stone-paper-scissor/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rock-Paper-Scissors</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="/stone-paper-scissor/images/rock.png">
+            <img src="/images/rock.png">
         </div>
         <div class="choice" id="paper">
-            <img src="/stone-paper-scissor/images/paper.png">
+            <img src="/images/paper.png">
         </div>
         <div class="choice" id="scissors">
-            <img src="/stone-paper-scissor/images/scissors.png">
+            <img src="/images/scissors.png">
         </div>
     </div>
     <div class="score-board">
@@ -32,6 +32,6 @@
     <div class="msg-container">
         <p id="msg">Play your move</p>
     </div>
-    <script src="/stone-paper-scissor/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
